--- a/examples/custom-provider/package.json
+++ b/examples/custom-provider/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@uppy-example/custom-provider",
+  "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@uppy/companion-client": "file:../../packages/@uppy/companion-client",
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/dashboard": "file:../../packages/@uppy/dashboard",
-    "@uppy/google-drive": "file:../../packages/@uppy/google-drive",
-    "@uppy/provider-views": "file:../../packages/@uppy/provider-views",
-    "@uppy/tus": "file:../../packages/@uppy/tus",
+    "@uppy/companion-client": "workspace:*",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/google-drive": "workspace:*",
+    "@uppy/provider-views": "workspace:*",
+    "@uppy/tus": "workspace:*",
     "babelify": "^10.0.0",
     "body-parser": "^1.18.2",
     "budo": "^11.3.2",
