--- a/examples/svelte-example/package.json
+++ b/examples/svelte-example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@uppy-example/svelte-app",
+  "version": "0.0.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -27,10 +28,10 @@
     "typescript": "~4.3"
   },
   "dependencies": {
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/svelte": "file:../../packages/@uppy/svelte",
-    "@uppy/webcam": "file:../../packages/@uppy/webcam",
-    "@uppy/xhr-upload": "file:../../packages/@uppy/xhr-upload",
+    "@uppy/core": "workspace:*",
+    "@uppy/svelte": "workspace:*",
+    "@uppy/webcam": "workspace:*",
+    "@uppy/xhr-upload": "workspace:*",
     "sirv-cli": "^1.0.0"
   },
   "private": true
