--- a/packages/@uppy/aws-s3-multipart/package.json
+++ b/packages/@uppy/aws-s3-multipart/package.json
@@ -23,8 +23,8 @@
     "url": "git+https://github.com/transloadit/uppy.git"
   },
   "dependencies": {
-    "@uppy/companion-client": "file:../companion-client",
-    "@uppy/utils": "file:../utils"
+    "@uppy/companion-client": "workspace:*",
+    "@uppy/utils": "workspace:*"
   },
   "devDependencies": {
     "nock": "^13.1.0",
