--- a/packages/@uppy/companion/Dockerfile.test
+++ b/packages/@uppy/companion/Dockerfile.test
@@ -9,7 +9,8 @@ WORKDIR /app
 
 RUN apk --update add  --virtual native-dep \
   make gcc g++ python libgcc libstdc++ git && \
-  npm  install && \
+  npm install -g corepack && \
+  corepack yarn install && \
   apk del native-dep
 RUN apk add bash
 
