--- a/packages/@uppy/image-editor/package.json
+++ b/packages/@uppy/image-editor/package.json
@@ -26,7 +26,7 @@
     "url": "git+https://github.com/transloadit/uppy.git"
   },
   "dependencies": {
-    "@uppy/utils": "file:../utils",
+    "@uppy/utils": "workspace:*",
     "cropperjs": "1.5.7",
     "preact": "^10.5.13"
   },
