--- a/packages/@uppy/react/package.json
+++ b/packages/@uppy/react/package.json
@@ -22,12 +22,12 @@
     "url": "git+https://github.com/transloadit/uppy.git"
   },
   "dependencies": {
-    "@uppy/dashboard": "file:../dashboard",
-    "@uppy/drag-drop": "file:../drag-drop",
-    "@uppy/file-input": "file:../file-input",
-    "@uppy/progress-bar": "file:../progress-bar",
-    "@uppy/status-bar": "file:../status-bar",
-    "@uppy/utils": "file:../utils",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/drag-drop": "workspace:*",
+    "@uppy/file-input": "workspace:*",
+    "@uppy/progress-bar": "workspace:*",
+    "@uppy/status-bar": "workspace:*",
+    "@uppy/utils": "workspace:*",
     "prop-types": "^15.6.1"
   },
   "devDependencies": {
