--- a/packages/uppy/package.json
+++ b/packages/uppy/package.json
@@ -31,38 +31,38 @@
     "url": "git+https://github.com/transloadit/uppy.git"
   },
   "dependencies": {
-    "@uppy/aws-s3": "file:../@uppy/aws-s3",
-    "@uppy/aws-s3-multipart": "file:../@uppy/aws-s3-multipart",
-    "@uppy/box": "file:../@uppy/box",
-    "@uppy/companion-client": "file:../@uppy/companion-client",
-    "@uppy/core": "file:../@uppy/core",
-    "@uppy/dashboard": "file:../@uppy/dashboard",
-    "@uppy/drag-drop": "file:../@uppy/drag-drop",
-    "@uppy/drop-target": "file:../@uppy/drop-target",
-    "@uppy/dropbox": "file:../@uppy/dropbox",
-    "@uppy/facebook": "file:../@uppy/facebook",
-    "@uppy/file-input": "file:../@uppy/file-input",
-    "@uppy/form": "file:../@uppy/form",
-    "@uppy/golden-retriever": "file:../@uppy/golden-retriever",
-    "@uppy/google-drive": "file:../@uppy/google-drive",
-    "@uppy/image-editor": "file:../@uppy/image-editor",
-    "@uppy/informer": "file:../@uppy/informer",
-    "@uppy/instagram": "file:../@uppy/instagram",
-    "@uppy/onedrive": "file:../@uppy/onedrive",
-    "@uppy/progress-bar": "file:../@uppy/progress-bar",
-    "@uppy/provider-views": "file:../@uppy/provider-views",
-    "@uppy/redux-dev-tools": "file:../@uppy/redux-dev-tools",
-    "@uppy/screen-capture": "file:../@uppy/screen-capture",
-    "@uppy/status-bar": "file:../@uppy/status-bar",
-    "@uppy/store-default": "file:../@uppy/store-default",
-    "@uppy/store-redux": "file:../@uppy/store-redux",
-    "@uppy/thumbnail-generator": "file:../@uppy/thumbnail-generator",
-    "@uppy/transloadit": "file:../@uppy/transloadit",
-    "@uppy/tus": "file:../@uppy/tus",
-    "@uppy/unsplash": "file:../@uppy/unsplash",
-    "@uppy/url": "file:../@uppy/url",
-    "@uppy/webcam": "file:../@uppy/webcam",
-    "@uppy/xhr-upload": "file:../@uppy/xhr-upload"
+    "@uppy/aws-s3": "workspace:*",
+    "@uppy/aws-s3-multipart": "workspace:*",
+    "@uppy/box": "workspace:*",
+    "@uppy/companion-client": "workspace:*",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/drag-drop": "workspace:*",
+    "@uppy/drop-target": "workspace:*",
+    "@uppy/dropbox": "workspace:*",
+    "@uppy/facebook": "workspace:*",
+    "@uppy/file-input": "workspace:*",
+    "@uppy/form": "workspace:*",
+    "@uppy/golden-retriever": "workspace:*",
+    "@uppy/google-drive": "workspace:*",
+    "@uppy/image-editor": "workspace:*",
+    "@uppy/informer": "workspace:*",
+    "@uppy/instagram": "workspace:*",
+    "@uppy/onedrive": "workspace:*",
+    "@uppy/progress-bar": "workspace:*",
+    "@uppy/provider-views": "workspace:*",
+    "@uppy/redux-dev-tools": "workspace:*",
+    "@uppy/screen-capture": "workspace:*",
+    "@uppy/status-bar": "workspace:*",
+    "@uppy/store-default": "workspace:*",
+    "@uppy/store-redux": "workspace:*",
+    "@uppy/thumbnail-generator": "workspace:*",
+    "@uppy/transloadit": "workspace:*",
+    "@uppy/tus": "workspace:*",
+    "@uppy/unsplash": "workspace:*",
+    "@uppy/url": "workspace:*",
+    "@uppy/webcam": "workspace:*",
+    "@uppy/xhr-upload": "workspace:*"
   },
   "devDependencies": {
     "abortcontroller-polyfill": "^1.7.3",
