--- a/.github/workflows/companion.yml
+++ b/.github/workflows/companion.yml
@@ -11,13 +11,27 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+      - name: Cache npm dependencies
+        id: cache-npm-libraries
+        uses: actions/cache@v2
+        with:
+          path: .yarn/cache/*
+          key: ${{ runner.os }}
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node-version}}
-      - name: Install npm 7
-        run: npm install --global npm@7
+      - name: Install Corepack if needed
+        run: corepack -v || npm install -g corepack
       - name: Install dependencies
-        run: npm ci
+        run: corepack yarn install --immutable
+        env:
+          # Necessary for Node.js v10.x
+          NODE_OPTIONS: --experimental-worker
+          YARN_IGNORE_NODE: 1
       - name: Run tests
-        run: npm run test:companion
+        run: corepack yarn run test:companion
+        env:
+          # Necessary for Node.js v10.x
+          NODE_OPTIONS: --experimental-worker
+          YARN_IGNORE_NODE: 1
