--- a/.github/workflows/end-to-end.yml
+++ b/.github/workflows/end-to-end.yml
@@ -14,14 +14,22 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+        with:
+          # Necessary for yarn version plugin
+          # https://yarnpkg.com/features/release-workflow#commit-history
+          fetch-depth: 0
+      - name: Cache npm dependencies
+        id: cache-npm-libraries
+        uses: actions/cache@v2
+        with:
+          path: .yarn/cache/*
+          key: ${{ runner.os }}
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - name: Install npm 7
-        run: npm install --global npm@7
+          node-version: 16.x
       - name: Install dependencies
-        run: npm ci
+        run: corepack yarn install --immutable
       - name: Start Sauce Connect
         uses: saucelabs/sauce-connect-action@v1.1.1
         with:
@@ -29,7 +37,7 @@ jobs:
           accessKey: ${{secrets.SAUCE_ACCESS_KEY}}
           tunnelIdentifier: ${{github.run_id}}.${{github.run_number}}
       - name: Run end-to-end browser tests
-        run: npm run test:endtoend
+        run: corepack yarn run test:endtoend
         env:
           SAUCE_TUNNEL_IDENTIFIER: ${{github.run_id}}.${{github.run_number}}
           SAUCE_BUILD: ${{github.run_id}}
