--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -11,20 +11,24 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+      - name: Cache npm dependencies
+        id: cache-npm-libraries
+        uses: actions/cache@v2
+        with:
+          path: .yarn/cache/*
+          key: ${{ runner.os }}
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - name: Install npm 7
-        run: npm install --global npm@7
+          node-version: 16.x
       - name: Install dependencies
-        run: npm ci
+        run: corepack yarn install --immutable
       - name: Build Uppy
-        run: npm run build
+        run: corepack yarn run build
       - name: Build website
-        run: npm run web:build
+        run: corepack yarn run web:build
       - name: Prepare deployment
-        run: npm run web:prepare-deploy --quiet
+        run: corepack yarn run web:prepare-deploy --quiet
         env:
           DEPLOY_DIR: ${{github.workspace}}/_deploy
       - name: Push to Github Pages
