--- a/examples/aws-companion/package.json
+++ b/examples/aws-companion/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@uppy-example/aws-companion",
+  "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@uppy/aws-s3": "file:../../packages/@uppy/aws-s3",
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/dashboard": "file:../../packages/@uppy/dashboard",
-    "@uppy/google-drive": "file:../../packages/@uppy/google-drive",
-    "@uppy/webcam": "file:../../packages/@uppy/webcam",
+    "@uppy/aws-s3": "workspace:*",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/google-drive": "workspace:*",
+    "@uppy/webcam": "workspace:*",
     "babelify": "^10.0.0",
     "body-parser": "^1.18.3",
     "budo": "^11.6.1",
