--- a/examples/digitalocean-spaces/package.json
+++ b/examples/digitalocean-spaces/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@uppy-example/digitalocean-spaces",
+  "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@uppy/aws-s3": "file:../../packages/@uppy/aws-s3",
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/dashboard": "file:../../packages/@uppy/dashboard",
+    "@uppy/aws-s3": "workspace:*",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
     "babelify": "^10.0.0",
     "body-parser": "^1.18.3",
     "budo": "^11.6.1",
