--- a/examples/react-native-expo/package.json
+++ b/examples/react-native-expo/package.json
@@ -1,20 +1,19 @@
 {
   "name": "@uppy-example/react-native-expo",
   "dependencies": {
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/dashboard": "file:../../packages/@uppy/dashboard",
-    "@uppy/instagram": "file:../../packages/@uppy/instagram",
-    "@uppy/react-native": "file:../../packages/@uppy/react-native",
-    "@uppy/tus": "file:../../packages/@uppy/tus",
-    "@uppy/url": "file:../../packages/@uppy/url",
-    "@uppy/xhr-upload": "file:../../packages/@uppy/xhr-upload",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/instagram": "workspace:*",
+    "@uppy/react-native": "workspace:*",
+    "@uppy/tus": "workspace:*",
+    "@uppy/url": "workspace:*",
+    "@uppy/xhr-upload": "workspace:*",
     "babel-preset-expo": "^5.0.0",
     "base64-js": "^1.3.0",
-    "expo": "^32.0.6",
-    "preact-render-to-string": "^4.1.0",
+    "expo": "^42.0.0",
+    "preact-render-to-string": "^5.1.0",
     "react": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-svg-uri": "gaboelnuevo/react-native-svg-uri#473e4f958e8846cbd5c69ce5cf59753cd5cea748"
+    "react-native": "~0.63.4"
   },
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
