--- a/examples/uppy-with-companion/package.json
+++ b/examples/uppy-with-companion/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@uppy-example/uppy-with-companion",
+  "version": "0.0.0",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
