--- a/examples/xhr-bundle/package.json
+++ b/examples/xhr-bundle/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@uppy-example/xhr-bundle",
+  "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@uppy/core": "file:../../packages/@uppy/core",
-    "@uppy/dashboard": "file:../../packages/@uppy/dashboard",
-    "@uppy/xhr-upload": "file:../../packages/@uppy/xhr-upload",
+    "@uppy/core": "workspace:*",
+    "@uppy/dashboard": "workspace:*",
+    "@uppy/xhr-upload": "workspace:*",
     "babelify": "^10.0.0",
     "budo": "^11.6.1",
     "cors": "^2.8.5",
