--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "pre-commit": "lint:staged",
   "license": "MIT",
   "engines": {
-    "npm": "7.x",
-    "node": "^v14.17.0 || >=v16.0.0"
+    "node": "^v14.17.0 || >=v16.0.0",
+    "yarn": "3.0.2"
   },
+  "packageManager": "yarn@3.0.2",
   "workspaces": [
     "examples/*",
     "packages/@uppy/*",
@@ -68,7 +69,6 @@
     "disc": "^1.3.3",
     "eslint": "^7.22.0",
     "eslint-config-transloadit": "^1.2.0",
-    "eslint-import-resolver-lerna": "^2.0.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.6",
@@ -94,7 +94,7 @@
     "minify-stream": "^2.0.1",
     "multi-glob": "^1.0.2",
     "nodemon": "^2.0.8",
-    "npm-auth-to-token": "^1.0.0",
+    "npm-auth-to-token": "1.0.0",
     "npm-packlist": "^2.2.2",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
@@ -105,7 +105,7 @@
     "postcss-safe-important": "^1.2.0",
     "pre-commit": "^1.2.2",
     "remark-cli": "^10.0.0",
-    "remark-lint-uppy": "file:private/remark-lint-uppy",
+    "remark-lint-uppy": "workspace:*",
     "replacestream": "^4.0.3",
     "resolve": "^1.17.0",
     "sass": "^1.29.0",
@@ -126,24 +126,23 @@
     "watchify": "^4.0.0"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "build:bundle": "node ./bin/build-bundle.js",
+    "build:bundle": "yarn node ./bin/build-bundle.js",
     "build:clean": "rm -rf packages/*/lib packages/@uppy/*/lib packages/*/dist packages/@uppy/*/dist",
-    "build:companion": "npm run --prefix ./packages/@uppy/companion build",
-    "build:css": "node ./bin/build-css.js",
-    "build:svelte": "npm run --prefix ./packages/@uppy/svelte build",
-    "build:angular": "npm run --prefix ./packages/@uppy/angular build:release",
+    "build:companion": "yarn workspace @uppy/companion build",
+    "build:css": "yarn node ./bin/build-css.js",
+    "build:svelte": "yarn workspace @uppy/svelte build",
+    "build:angular": "yarn workspace @uppy/angular build:release",
     "build:js": "npm-run-all build:lib build:companion build:locale-pack build:svelte build:angular build:bundle",
-    "build:lib": "node ./bin/build-lib.js",
-    "build:locale-pack": "node --experimental-abortcontroller ./bin/locale-packs.js build",
+    "build:lib": "yarn node ./bin/build-lib.js",
+    "build:locale-pack": "yarn node --experimental-abortcontroller ./bin/locale-packs.js build",
     "build": "npm-run-all --parallel build:js build:css --serial size",
-    "contributors:save": "node ./bin/update-contributors.mjs",
-    "dev:browsersync": "npm run --prefix examples/dev start",
-    "dev:watch-sandbox": "npm run --prefix examples/dev watch:sandbox",
+    "contributors:save": "yarn node ./bin/update-contributors.mjs",
+    "dev:browsersync": "yarn workspace @uppy-example/dev start",
+    "dev:watch-sandbox": "yarn workspace @uppy-example/dev watch:sandbox",
     "dev:with-companion": "npm-run-all --parallel start:companion dev:watch-sandbox watch:js:lib watch:css dev:browsersync",
     "dev": "npm-run-all --parallel dev:watch-sandbox watch:js:lib watch:css dev:browsersync",
-    "example": "node bin/run-example",
-    "lint:fix": "npm run lint -- --fix",
+    "example": "yarn node bin/run-example",
+    "lint:fix": "yarn run lint -- --fix",
     "lint:markdown": "remark -f -q . -i .remarkignore",
     "lint:staged": "lint-staged",
     "lint:css": "stylelint ./packages/**/*.scss",
@@ -153,17 +152,17 @@
     "size": "echo 'JS Bundle mingz:' && cat ./packages/uppy/dist/uppy.min.js | gzip | wc -c && echo 'CSS Bundle mingz:' && cat ./packages/uppy/dist/uppy.min.css | gzip | wc -c",
     "start:companion": "bash ./bin/companion",
     "start": "npm-run-all --parallel watch start:companion web:start",
-    "test:companion": "npm run --prefix ./packages/@uppy/companion test",
-    "test:endtoend:local": "npm run --prefix ./test/endtoend test:endtoend:local",
-    "test:endtoend": "npm run --prefix ./test/endtoend test:endtoend",
-    "test:locale-packs": "node ./bin/locale-packs.js test",
-    "test:type": "lerna exec --scope '@uppy/*' --ignore '@uppy/{angular,react-native,locales,companion,provider-views,robodog,svelte}' tsd",
+    "test:companion": "yarn workspace @uppy/companion test",
+    "test:endtoend:local": "yarn workspace @uppy-tests/end2end test:endtoend:local",
+    "test:endtoend": "yarn workspace @uppy-tests/end2end test:endtoend",
+    "test:locale-packs": "yarn node ./bin/locale-packs.js test",
+    "test:type": "yarn workspaces foreach -piv --include '@uppy/*' --exclude '@uppy/{angular,react-native,locales,companion,provider-views,robodog,svelte}' exec tsd",
     "test:unit": "npm run build:lib && jest --env jsdom",
     "test:watch": "jest --env jsdom --watch",
     "test:size": "size-limit",
     "test": "npm-run-all lint test:locale-packs test:unit test:type test:companion",
-    "uploadcdn": "node ./bin/upload-to-cdn.js",
-    "version": "node ./bin/after-version-bump.js",
+    "uploadcdn": "yarn node ./bin/upload-to-cdn.js",
+    "version": "yarn node ./bin/after-version-bump.js",
     "watch:css": "onchange 'packages/**/*.scss' --initial --verbose -- npm run build:css",
     "watch:js:bundle": "onchange 'packages/{@uppy/,}*/src/**/*.js' --initial --verbose -- npm run build:bundle",
     "watch:js:lib": "onchange 'packages/{@uppy/,}*/src/**/*.js' --initial --verbose -- npm run build:lib",
@@ -175,8 +174,8 @@
     "web:prepare-deploy": "bash ./bin/prepare-web-deploy",
     "web:generate": "cd website && touch db.json && npm run hexo generate",
     "web:inject-bundles-misc": "cd website && node inject.js",
-    "web:inject-disc": "npm run build:lib && node ./bin/disc.js",
-    "web:inject-frontpagecodesample": "npm run web:generate && cp -f website/public/frontpage-code-sample.html website/themes/uppy/layout/partials/frontpage-code-sample.html && touch website/themes/uppy/layout/index.ejs",
+    "web:inject-disc": "yarn run build:lib && node ./bin/disc.js",
+    "web:inject-frontpagecodesample": "yarn run web:generate && cp -f website/public/frontpage-code-sample.html website/themes/uppy/layout/partials/frontpage-code-sample.html && touch website/themes/uppy/layout/index.ejs",
     "web:start": "npm-run-all build:lib --parallel watch:css web:watch-examples web:bundle-watch-inject web:watch",
     "web:watch-examples": "cd website && node build-examples.js watch",
     "web:watch": "cd website && touch db.json && npm run hexo server"
@@ -190,5 +189,8 @@
     "testMatch": [
       "**/packages/**/*.test.js"
     ]
+  },
+  "resolutions": {
+    "npm-auth-to-token@1.0.0": "patch:npm-auth-to-token@npm:1.0.0#.yarn/patches/npm-auth-to-token-npm-1.0.0-c288ce201f"
   }
 }
